# ruckig

./: .gitignore  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  README.md  log-human.live.txt  log-tests.txt  package.xml  patch-c++11.sh  pyproject.toml  pytest.txt  setup.py
.github/workflows/: cd.yml  ci.yml  documentation.yml  publish-ros.yml  publish.yml
cmake/: FindReflexxes.cmake
doc/: Doxyfile  loc.zsh
doc/pages/: example_1.md  example_2.md  example_3.md  example_4.md  example_5.md  example_6.md  example_7.md  example_8.md  example_9.md  intermediate_waypoints.md
doc/web-gui/: README.md  make_wasm.sh  package-lock.json  package.json
doc/web-gui/src/: gui.js  index.html  ruckig.js  ruckig.wasm
doc/web-visualization/: Dockerfile  README.md  web-visualization.cpp  web-visualization.html
examples/: 01_position.cpp  01_position.py  01_position.rs  02_position_offline.cpp  02_position_offline.py  02_position_offline.rs  03_waypoints.cpp  03_waypoints.py  03_waypoints.rs  04_waypoints_online.cpp  04_waypoints_online.py  05_velocity.cpp  05_velocity.py  05_velocity.rs  06_stop.cpp  06_stop.py  07_minimum_duration.cpp  07_minimum_duration.py  08_per_section_minimum_duration.cpp  08_per_section_minimum_duration.py  09_dynamic_dofs.cpp  10_dynamic_dofs_waypoints.cpp  10_eigen_vector_type.cpp  11_eigen_vector_type.cpp  12_custom_vector_type.cpp  12_custom_vector_type_dynamic_dofs.cpp  13_custom_vector_type_dynamic_dofs.cpp  13_custom_vector_type_dynamic_dofs.py  13_tracking.cpp  13_tracking.py  14_tracking.cpp  14_tracking.py  15_tracking_offline.cpp  15_tracking_offline.py  16_speed.cpp  16_speed.py  1_position.cpp  1_position.py  2_position_offline.cpp  2_position_offline.py  (+25 more)
include/ruckig/: block.hpp  brake.hpp  calculator.hpp  calculator_cloud.hpp  calculator_online.hpp  calculator_target.hpp  error.hpp  input_parameter.hpp  output_parameter.hpp  parameter.hpp  position.hpp  profile.hpp  reflexxes.hpp  reflexxes_comparison.hpp  result.hpp  roots.hpp  ruckig.hpp  smoothie.hpp  steps.hpp  trajectory.hpp  utils.hpp  velocity.hpp  wolfram.hpp
include/ruckig/alternative/: quintic.hpp  reflexxes.hpp  smoothie.hpp
needle_sync/: needle_limits_override.h
needle_sync/motion_controller/: governor_test  kalman_filter_test  pid_controller_test  pull_externals.sh  scurve_motion_planner_test  wrap_manager_test
notebooks/: brake.nb  newton-step.nb  quintic.nb  ruckig-step1-uddu.nb  ruckig-step1-udud.nb  ruckig-step1.nb  ruckig-step2-uddu.nb  ruckig-step2-udud.nb  ruckig-step2.nb
scripts/: patch-c++11.sh
src/: brake.cpp  position-step1.cpp  position-step2.cpp  position1.cpp  position2.cpp  profile.cpp  python.cpp  ruckig.cpp  step1.cpp  step2.cpp  velocity-step1.cpp  velocity-step2.cpp  velocity1.cpp  velocity2.cpp
src/ruckig/: brake.cpp  cloud_client.cpp  position-second-step1.cpp  position-second-step2.cpp  position-step1.cpp  position-step2.cpp  position-third-step1.cpp  position-third-step2.cpp  position_second_step1.cpp  position_third_step1.cpp  position_third_step2.cpp  python.cpp  velocity-second-step1.cpp  velocity-second-step2.cpp  velocity-step1.cpp  velocity-step2.cpp  velocity-third-step1.cpp  velocity-third-step2.cpp  velocity_third_step1.cpp  wasm.cpp
src/wrapper/: python.cpp  rust.hpp  rust.rs  rust_build.rs
test/: benchmark-target.cpp  benchmark_plot.py  benchmark_target.cpp  demo.ipynb  doctest.h  otg-benchmark.cpp  otg-test.cpp  otg_multiple.py  otg_plot.py  plot_multiple.py  plot_target.py  plot_toppra.py  plot_waypoints.py  plotter.py  randomizer.hpp  test-suite.zsh  test-target-known.cpp  test-target.cpp  test_target.cpp  test_target_known.cpp  toppra.py
